--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .invisble {
-  visibility: oculto;
+  visibility: hidden;
 }
 
 header {
@@ -40,7 +40,7 @@ header {
   font-size: 3em;
 }
 
-.cuadrado-container {
+.cuadrado-contenedor {
   display: grid;
   grid-template-rows: 180px 180px;
   grid-template-columns: 180px 180px;
@@ -154,7 +154,7 @@ header {
   text-align: center;
 }
 
-.boton-comenzar {
+.comenzar-boton {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
@@ -173,7 +173,7 @@ header {
   cursor: pointer;
 }
 
-.boton-comenzar:hover {
+.comenzar-boton:hover {
   color: #333;
   border-color: #888;
   outline: 0;
@@ -194,7 +194,7 @@ header {
     font-size: 2em;
   }
 
-  .cuadrado-container {
+  .cuadrado-contenedor {
     width: 100%;
     height: 100%;
     grid-template-rows: 150px 150px;
